variable cleanup